--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
 
+def getLocalProperties(String propertyName) {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+    return properties.getProperty(propertyName)
+}
 
+static def quoted(String value) {
+    return String.format("\"%s\"", value)
+}
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -13,7 +21,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField "String", "CLIENT_ID", "\"314239205062-0fbd7e2dd75u3vvon4h06he90c4ict1b.apps.googleusercontent.com\""
+        buildConfigField "String", "CLIENT_ID", quoted("314239205062-0fbd7e2dd75u3vvon4h06he90c4ict1b.apps.googleusercontent.com")
+        buildConfigField "String", "BASE_URL", quoted(getLocalProperties("base_url"))
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
@@ -42,15 +51,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    def navigation_version = "2.2.2"
+    def navigation_version = "2.3.0"
     implementation "androidx.navigation:navigation-fragment:$navigation_version"
     implementation "androidx.navigation:navigation-ui:$navigation_version"
-
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
@@ -66,8 +69,19 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
+// Retrofit (HTTP client) dependencies
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    def retrofit_version = "2.6.2"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
     // Stetho (inspection) dependency
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
     implementation 'org.apache.commons:commons-csv:1.8'
+
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
